# thereisnohr

./: .env.example  .gitignore  AGENTS.md  Dockerfile  GEMINI.md  README.md  alembic.ini  app.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20260216_0001_initial_schema.py  20260223_0002_identity_content_hash.py  20260303_0003_multi_dim_embeddings.py  5435152bc2bb_drop_owner_type_and_add_signals_json.py  8f12b4f1d4a9_add_interview_pack_json_to_matches.py  f2ca03afb3a7_add_async_task_model.py
config/: demo_aliases.yaml  model_aliases.yaml
cvs/: summary.txt
data/: cs_teacher.txt  job_descriptions.txt  physics_teacher.txt
docs/: architecture.md  full-software-guide.md  stage-0-1-guide.md  stage-2-llm.md  stage-3-ingestion.md  stage-4-retrieval-ranking.md  stage-5-explanations-interview-prep.md
models/: README.md  config.json  model.safetensors.index.json
notebooks/: README.md  _utils.py  extraction_service_testing.ipynb  fine_tuned_model.ipynb  ingestion_service_testing.ipynb  llama3.2-1b_finetune.ipynb  llm_registry_testing.ipynb  model_fine_tuning.ipynb  parsers_testing.ipynb  repositories_smoke_testing.ipynb  resume_summarizer.ipynb  resume_summarizer_model_testing.ipynb  summaries_dataset.ipynb  thereisnohr.ipynb
notebooks/.ipynb_checkpoints/: thereisnohr-checkpoint.ipynb
notebooks/legacy/: Resume Dataset.ipynb  candidate_selector.ipynb  model_fine_tuning.ipynb  resume_summarizer_model_testing.ipynb
scripts/: backfill_candidate_identity_v2.py  backfill_identity.py  backfill_section_embeddings.py  create_embedding_hnsw_indexes.py  generate_dummy_pdfs.py
src/: __init__.py  cli.py
src/api/: app.py  schemas.py  tasks.py
src/api/routers/: __init__.py  candidates.py  ingest.py  jobs.py  matches.py  tasks.py
src/core/: __init__.py  config.py  logging.py
src/extract/: __init__.py  service.py  types.py
src/ingest/: __init__.py  entities.py  identity.py  metaflow_telemetry.py  model_fallback.py  parser.py  pdf_ingestion_flow.py  service.py
src/llm/: __init__.py  client.py  errors.py  factory.py  registry.py  types.py
src/ranking/: __init__.py  service.py  types.py  workflow.py
src/retrieval/: __init__.py  service.py
src/storage/: __init__.py  db.py  models.py  repositories.py
tests/: test_backfill_candidate_identity_v2.py  test_cli.py  test_config.py  test_embedding_repository.py  test_identity_resolution.py  test_ingest_flow_metrics.py  test_ingest_parser.py  test_ingest_service.py  test_litellm_client.py  test_llm_errors.py  test_llm_registry.py  test_model_fallback.py  test_models.py
tests/core/: test_config.py  test_logging.py
tests/extract/: test_extract_service.py  test_extract_types.py
tests/ingest/: test_identity_resolution.py  test_ingest_service.py
tests/integration/: _helpers.py  conftest.py  test_ingest_flow_integration.py  test_ingest_service_integration.py  test_match_repository.py
tests/llm/: test_litellm_client.py  test_llm_errors.py  test_llm_registry.py
tests/ranking/: test_ranking_types.py
tests/retrieval/: test_retrieval_service.py
tests/storage/: test_embedding_repository.py  test_models.py
thereisnohr/: __init__.py  getter.py  handler.py  profiler.py  selector.py  thereisnohr.py
thereisnohr/data/: getter.py  handler.py
thereisnohr/models/: profiler.py
thereisnohr/pipeline/: main.py  selector.py
ui/: api_client.py  app.py  demo_app.py
ui/pages/: 1_Ingest_Resumes.py  2_Manage_Jobs.py  3_Rank_Candidates.py
