[tool.poetry]
name = "thereisnohr"
version = "0.1.0"
description = "A simple AI tool to automate resume selection,"
authors = ["Juan Beiroa <jbeiroa@gmail.com>"]
license = "CC BY-NC 4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.4.2"
pymupdf = "^1.24.14"
pandas = "^2.2.3"
pymupdf4llm = "^0.0.17"
sentence-transformers = "^3.3.1"
mlx-lm = "^0.20.4"
kagglehub = "^0.3.5"
matplotlib = "^3.10.0"
datasets = "^3.2.0"
seaborn = "^0.13.2"
openai = "^1.76.0"
tiktoken = "^0.9.0"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
